--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -35,11 +35,12 @@
                 </div>
                 <div class="events">
                     <div class="event">
+                        <div class="vertical-line-icon"></div>
                         <div class="title">
-                            <i class="fas fa-circle"></i>
                             <h3 class="event-title">Example event</h3>
+                            <div class="event-time">7h - 10h</div>
                         </div>
-                        <div class="event-time">7h - 10h</div>
+                        
                     </div>
                 </div>
                 <div class="add-event-wrapper">
