--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -1,33 +1,43 @@
+
+
 <div class="container">
     <div class="row">
-        <div class="col-7">
-            <div class="container left">
-                <div class="calendar">
-                    <div class="month">
-                        <div class="date"></div>
-                        <span>
-                            <i class="fas fa-angle-left prev"></i>
-                            <i class="fas fa-angle-right next"></i>
-                        </span>
-                        <div class="goToDate">
-                            <input class="inputDate" type="text" placeholder="mm/yyyy">
-                            <div class="goToButton">Enter</div>
+        <div class="col-3">
+            <div class="left">
+                <button class="add-event event-button">
+                    <i class="fas fa-plus icon-add-event"></i>
+                    <span class="text-add-event">
+                      Add Event
+                    </span>
+                </button>
+                <div class="container calendar-main">
+                    <div class="calendar">
+                        <div class="month">
+                            <div class="date" ></div>
+                            <span>
+                                <i class="fas fa-angle-left prev"></i>
+                                <i class="fas fa-angle-right next"></i>
+                            </span>
+                            <div class="goToDate">
+                                <input class="inputDate" type="text" placeholder="mm/yyyy">
+                                <div class="goToButton">Enter</div>
+                            </div>
                         </div>
+                        <div class="weekdays">
+                            <div>Mon</div>
+                            <div>Tue</div>
+                            <div>Wed</div>
+                            <div>Thu</div>
+                            <div>Fri</div>
+                            <div class="weekend">Sat</div>
+                            <div class="weekend">Sun</div>
+                        </div>
+                        <div class="days"></div>
                     </div>
-                    <div class="weekdays">
-                        <div>Mon</div>
-                        <div>Tue</div>
-                        <div>Wed</div>
-                        <div>Thu</div>
-                        <div>Fri</div>
-                        <div class="weekend">Sat</div>
-                        <div class="weekend">Sun</div>
-                    </div>
-                    <div class="days"></div>
                 </div>
             </div>
         </div>
-        <div class="col-5">
+        <div class="col-9">
             <div class="container right">
                 <div class="today-date">
                     <div class="event-day"></div>
@@ -63,9 +73,7 @@
                         <button class="add-event-btn">Add Event</button>
                     </div>
                 </div>
-                <button class="add-event">
-                    <i class="fas fa-plus"></i>
-                </button>
+               
             </div>
         </div>
     </div>
