--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -12,6 +12,29 @@ body {
 
 .left {
     margin-top: 20px;
+}
+
+.event-button{
+    border-radius: 25px;
+    border: 3px solid white;
+    background-color: white;
+    padding: 2px 10px;
+    min-width: 100px;
+    min-height: 48px;
+    align-items: center;
+}
+
+.icon-add-event{
+    padding: 0 5px;
+}
+
+.text-add-event{
+    padding: 0 5px;
+    font-weight: 500;
+}
+
+.calendar-main {    
+    margin-top: 20px;
     border-radius: 40px;
     padding: 0 20px;
     background-color: white;
@@ -30,20 +53,22 @@ body {
 
         .month {
             width: 100%;
-            height: 50px;
+            height: 32px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 20px 50px;
-            font-size: 2rem;
+            padding-top: 20px;
+            font-size: 14px;
             font-weight: 500;
             text-transform: capitalize;
             position: relative;
+            margin-bottom: 10px;
 
             .prev,
             .next,
             .date {
                 cursor: pointer;
+                white-space: nowrap;
 
                 &:hover {
                     color: var(--my-cyan);
@@ -90,8 +115,7 @@ body {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 0 20px;
-            font-size: 1rem;
+            font-size: 12px;
             font-weight: 500;
             text-transform: capitalize;
 
@@ -110,19 +134,16 @@ body {
 
         .days {
             width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            padding: 5px 5px;
-            font-size: 1.5rem;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr); /* Tạo 7 cột với chiều rộng bằng nhau */
+            gap: 5px;
+            font-size: 12px;
             font-weight: 500;
             margin-bottom: 20px;
-            border: 2px solid var(--border-white);
-            border-radius: 20px;
 
             .day {
-                width: 14.285%;
-                height: 120px;
+                width: 24px;
+                height: 24px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -130,13 +151,13 @@ body {
                 color: var(--my-cyan);
 
                 &:not(.prev-month):not(.active):not(.next-month):hover {
-                    font-size: 2.5rem;
+                    background-color: #f1f3f4;
+                    border-radius: 50%;
                 }
             }
 
             .active {
                 position: relative;
-                font-size: 2rem;
                 color: white;
                 background-image: var(--gradient-cyan);
                 border-radius: 15px;
@@ -148,7 +169,6 @@ body {
             }
 
             .today {
-                font-size: 2.5rem;
             }
 
         }
